[gd_scene load_steps=36 format=3 uid="uid://chee17ae0u5op"]

[ext_resource type="Theme" uid="uid://byds11vsd6ber" path="res://assets/pixelart/pixelart.tres" id="1_0bcbq"]
[ext_resource type="Script" uid="uid://cdovf2anj17a" path="res://logic/backend/main_menu.gd" id="1_7gw0o"]
[ext_resource type="FontFile" uid="uid://07yvi11ui7vg" path="res://assets/fonts/Peaberry/PeaberryMono.ttf" id="1_i2dk5"]
[ext_resource type="StyleBox" uid="uid://b6h4sqok6xlxy" path="res://assets/pixelart/button_normal_style.tres" id="2_40phc"]
[ext_resource type="PackedScene" uid="uid://cbd6qlawp2u3l" path="res://scenes/utilities/circle_transition.tscn" id="3_lqaap"]
[ext_resource type="StyleBox" uid="uid://dj0ib6qvmygdj" path="res://assets/pixelart/button_pressed_style.tres" id="3_u8ajb"]
[ext_resource type="Texture2D" uid="uid://c8yfrjpm5qqjt" path="res://assets/sprites/ui/ui-tileset.png" id="4_05n6c"]
[ext_resource type="Script" uid="uid://da5yr06jbidxq" path="res://logic/backend/audio_menu.gd" id="4_mjs4o"]
[ext_resource type="Script" uid="uid://crbktcitbaljs" path="res://logic/backend/viewport_container.gd" id="6_8dq4u"]
[ext_resource type="Texture2D" uid="uid://dlwi6jgvvy220" path="res://assets/art/titlescreenbackground.webp" id="6_nqgty"]
[ext_resource type="PackedScene" uid="uid://peloieugygrl" path="res://scenes/utilities/load_button.tscn" id="9_ijoqn"]
[ext_resource type="Script" uid="uid://f3nim7w4ggco" path="res://scenes/Mainmenumusic.gd" id="12_flqon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ve7hb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n3wa8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rbmb2"]
texture = ExtResource("4_05n6c")
texture_margin_left = 7.0
texture_margin_top = 7.0
texture_margin_right = 7.0
texture_margin_bottom = 7.16192
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="Theme" id="Theme_un6xn"]
default_font = ExtResource("1_i2dk5")
Button/constants/h_separation = 0
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 30
Button/fonts/font = ExtResource("1_i2dk5")
Button/styles/disabled = null
Button/styles/focus = SubResource("StyleBoxEmpty_ve7hb")
Button/styles/hover = ExtResource("2_40phc")
Button/styles/normal = ExtResource("2_40phc")
Button/styles/pressed = ExtResource("3_u8ajb")
Label/colors/font_color = Color(0.317647, 0.321569, 0.384314, 1)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("1_i2dk5")
Label/styles/normal = SubResource("StyleBoxEmpty_n3wa8")
Panel/styles/panel = SubResource("StyleBoxTexture_rbmb2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yo2i8"]
texture = ExtResource("6_nqgty")
region_rect = Rect2(0, -2.39162, 1032.06, 1797.76)

[sub_resource type="Resource" id="Resource_0jpkc"]
metadata/__load_path__ = "res://scenes/samples/platformer_sample.tscn"

[sub_resource type="LabelSettings" id="LabelSettings_utnyj"]
font_size = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l16ti"]
bg_color = Color(0.407987, 4.39434e-05, 0.358832, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0afgv"]
bg_color = Color(0.407843, 0, 0.360784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlscf"]
bg_color = Color(0.407843, 0, 0.360784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xawr"]
bg_color = Color(0.407843, 0, 0.360784, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0qyyl"]
font_size = 100

[sub_resource type="Animation" id="Animation_ro8gj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings Menu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 0)]
}

[sub_resource type="Animation" id="Animation_u1ere"]
resource_name = "main_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings Menu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1152, 0)]
}

[sub_resource type="Animation" id="Animation_ns3jf"]
resource_name = "settings_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main Menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1152, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings Menu:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xq8ga"]
_data = {
&"RESET": SubResource("Animation_ro8gj"),
&"main_menu": SubResource("Animation_u1ere"),
&"settings_menu": SubResource("Animation_ns3jf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h0fc5"]
animation = &"main_menu"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cmvsc"]
animation = &"settings_menu"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ckc0g"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_huiay"]
xfade_time = 1.0
advance_mode = 2
advance_expression = "self.current_menu == Menu.SETTINGS_MENU"

[sub_resource type="Curve" id="Curve_h8o4p"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.99996, 1), 0.0, 0.0, 0, 0, Vector2(0.99997, 1), 0.0, 0.0, 0, 0, Vector2(0.99998, 1), 0.0, 0.0, 0, 0, Vector2(0.99999, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 6

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b8jnv"]
xfade_time = 1.2
xfade_curve = SubResource("Curve_h8o4p")
advance_mode = 2
advance_expression = "current_menu == Menu.MAIN_MENU"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6w8s2"]
states/End/position = Vector2(925, 167)
states/Start/position = Vector2(225, 179)
states/main_menu/node = SubResource("AnimationNodeAnimation_h0fc5")
states/main_menu/position = Vector2(418, 179)
states/settings_menu/node = SubResource("AnimationNodeAnimation_cmvsc")
states/settings_menu/position = Vector2(685, 179)
transitions = ["Start", "main_menu", SubResource("AnimationNodeStateMachineTransition_ckc0g"), "main_menu", "settings_menu", SubResource("AnimationNodeStateMachineTransition_huiay"), "settings_menu", "main_menu", SubResource("AnimationNodeStateMachineTransition_b8jnv")]
graph_offset = Vector2(-12, 98)

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme = SubResource("Theme_un6xn")
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0bcbq")
theme_override_styles/panel = SubResource("StyleBoxTexture_yo2i8")
metadata/_edit_use_anchors_ = true

[node name="Main Menu" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_8dq4u")
metadata/_edit_use_anchors_ = true

[node name="Menu Control" type="Control" parent="Main Menu" node_paths=PackedStringArray("start_button", "settings_button", "exit_button")]
layout_mode = 2
script = ExtResource("1_7gw0o")
start_button = NodePath("../MarginContainer/VBoxContainer/start_button")
settings_button = NodePath("../MarginContainer/VBoxContainer/settings_button")
exit_button = NodePath("../MarginContainer/VBoxContainer/exit_button")
start_scene_path = SubResource("Resource_0jpkc")
transition_path = ExtResource("3_lqaap")

[node name="MarginContainer" type="MarginContainer" parent="Main Menu"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="title" type="Label" parent="Main Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 10
theme_override_font_sizes/font_size = 45
text = "
Choya

"
label_settings = SubResource("LabelSettings_utnyj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_button" type="Button" parent="Main Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 45
theme_override_styles/pressed = SubResource("StyleBoxFlat_l16ti")
text = "Start"

[node name="load_button" parent="Main Menu/MarginContainer/VBoxContainer" instance=ExtResource("9_ijoqn")]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 45
theme_override_styles/pressed = SubResource("StyleBoxFlat_0afgv")
text = "Continue"

[node name="settings_button" type="Button" parent="Main Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 45
theme_override_styles/pressed = SubResource("StyleBoxFlat_jlscf")
text = "Settings"

[node name="exit_button" type="Button" parent="Main Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 45
theme_override_styles/pressed = SubResource("StyleBoxFlat_6xawr")
text = "Exit"

[node name="Settings Menu" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0963
anchor_top = 0.025
anchor_right = 2.0963
anchor_bottom = 1.025
offset_left = -32.004
offset_top = -48.0
offset_right = -32.0039
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_8dq4u")
metadata/_edit_use_anchors_ = true

[node name="Audio Control" type="Control" parent="Settings Menu" node_paths=PackedStringArray("master_slider", "music_slider", "sfx_slider")]
layout_mode = 2
script = ExtResource("4_mjs4o")
master_slider = NodePath("../MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/HSlider")
music_slider = NodePath("../MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/HSlider2")
sfx_slider = NodePath("../MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/HSlider3")

[node name="MarginContainer" type="MarginContainer" parent="Settings Menu"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Settings Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Settings Menu/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Setting"
label_settings = SubResource("LabelSettings_0qyyl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_0bcbq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Master"
vertical_alignment = 1

[node name="Label2" type="Label" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_0bcbq")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Music
"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "SFX
"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HSlider" type="HSlider" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_0bcbq")
max_value = 1.0
step = 0.01

[node name="HSlider2" type="HSlider" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_0bcbq")
max_value = 1.0
step = 0.01

[node name="HSlider3" type="HSlider" parent="Settings Menu/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("1_0bcbq")
max_value = 1.0
step = 0.01

[node name="Button" type="Button" parent="Settings Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Return"

[node name="Node" type="Node" parent="Settings Menu" node_paths=PackedStringArray("audio_player")]
script = ExtResource("12_flqon")
audio_player = NodePath("../../AudioStreamPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xq8ga")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6w8s2")
advance_expression_base_node = NodePath("../Main Menu/Menu Control")
anim_player = NodePath("../AnimationPlayer")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Settings Menu/MarginContainer/VBoxContainer/Button" to="Main Menu/Menu Control" method="_on_return_main_menu_button_pressed"]
